--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   dart_rss: ^2.0.1
   http: ^0.13.4
   cached_network_image: ^3.2.0
+  flutter_html: ^2.2.1
 
 
   # The following adds the Cupertino Icons font to your application.
