--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,9 @@ dependencies:
   http: ^0.13.4
   cached_network_image: ^3.2.0
   flutter_html: ^2.2.1
+  localstorage: ^4.0.0+1
+  quiver: ^3.0.1+1
+  url_launcher: ^6.0.17
 
 
   # The following adds the Cupertino Icons font to your application.
